fixed image squish

--- a/src/styles/views/_defaults.styl
+++ b/src/styles/views/_defaults.styl
@@ -133,6 +133,7 @@
 
       img {
         max-width: 100%;
+        height: auto;
       }
     }
 
